solving number overflowing issue in the input

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
   align-items: center;
   height: 100vh;
   background-color: hsl(0, 0%, 95%);
-
 }
 #calculator {
   font-family: Arial, Helvetica, sans-serif;
@@ -22,16 +21,16 @@ body {
   text-align: left;
   border: none;
   background-color: hsl(0, 0%, 20%);
-  color:#fff;
+  color: #fff;
 }
 
 #keys {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   padding: 25px;
 }
-button {
+.button {
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -42,13 +41,12 @@ button {
   font-weight: bold;
   cursor: pointer;
 }
-button:hover {
-  background-color: hsl(0, 0%, 40%);;
+.button:hover {
+  background-color: hsl(0, 0%, 40%);
 }
-button:active {
-  background-color: hsl(0, 0%, 50%);;
+.button:active {
+  background-color: hsl(0, 0%, 50%);
 }
-
 .operator-btn {
   background-color: hsl(35, 100%, 55%);
 }
